--- a/requirements.txt
+++ b/requirements.txt
@@ -69,7 +69,7 @@ langchain-core==0.3.48
 langchain-text-splitters==0.3.7
 langsmith==0.3.18
 libclang==18.1.1
-langchain-community==0.3.23
+langchain-community
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
