--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ kiwisolver==1.4.8
 kubernetes==32.0.1
 langchain==0.3.27
 langchain-core==0.3.50
-langchain-community==0.3.25
+langchain-community>=0.3.25
 langchain-text-splitters==0.3.8
 langsmith==0.3.18
 libclang==18.1.1
