--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ jupyter_core==5.7.2
 keras==3.8.0
 kiwisolver==1.4.8
 kubernetes==32.0.1
-langchain==0.1.17
+langchain>=0.1.17,<0.2.0
 langchain-core==0.3.50
 langchain-community>=0.3.25
 langchain-text-splitters==0.3.8
