--- a/requirements.txt
+++ b/requirements.txt
@@ -148,7 +148,7 @@ SQLAlchemy==2.0.39
 stack-data==0.6.3
 starlette==0.46.1
 sympy==1.13.3
-tenacity==9.0.0
+tenacity>=8.1.0,<9.0.0
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
