--- a/streamlitfolder/requirements.txt
+++ b/streamlitfolder/requirements.txt
@@ -1,46 +1,99 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aiosignal==1.3.2
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
+blinker==1.9.0
+Bottleneck==1.4.2
+cachetools==5.5.2
 certifi==2025.4.26
 charset-normalizer==3.4.2
+click==8.2.0
+colorama==0.4.6
 dataclasses-json==0.6.7
+docstring_parser==0.16
 frozenlist==1.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-api-core==2.24.2
+google-auth==2.40.1
+google-cloud-aiplatform==1.92.0
+google-cloud-bigquery==3.31.0
+google-cloud-core==2.4.3
+google-cloud-resource-manager==1.14.2
+google-cloud-storage==2.19.0
+google-crc32c==1.7.1
+google-genai==1.14.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
 greenlet==3.2.2
+grpc-google-iam-v1==0.14.2
+grpcio==1.71.0
+grpcio-status==1.71.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.0
 idna==3.10
+Jinja2==3.1.6
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
 langchain==0.3.25
 langchain-community==0.3.23
 langchain-core==0.3.59
+langchain-google-vertexai==2.0.23
 langchain-text-splitters==0.3.8
 langsmith==0.3.42
+MarkupSafe==3.0.2
 marshmallow==3.26.1
 multidict==6.4.3
 mypy_extensions==1.1.0
+narwhals==1.39.0
+numexpr==2.10.2
 numpy==2.2.5
 orjson==3.10.18
 packaging==24.2
+pandas==2.2.3
+pillow==11.2.1
 propcache==0.3.1
+proto-plus==1.26.1
+protobuf==5.29.4
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.11.4
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
+pydeck==0.9.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+pytz==2025.2
 PyYAML==6.0.2
+referencing==0.36.2
 requests==2.32.3
 requests-toolbelt==1.0.0
+rpds-py==0.24.0
+rsa==4.9.1
+shapely==2.1.0
+six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.40
+streamlit==1.45.0
 tenacity==9.1.2
+toml==0.10.2
+tornado==6.4.2
 typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+tzdata==2025.2
 urllib3==2.4.0
+validators==0.35.0
+watchdog==6.0.0
+websockets==15.0.1
 yarl==1.20.0
 zstandard==0.23.0
